GA  1.0.6 - 2009-08-xx

- get_driver_instance() is only available in dynamic library builds, static builds
  won't have this symbol. This is done, because someone might decided to load the
  dll with LoadLibrary/dlopen and needs an entry point to start using the library
  (some kind of a Driver Manager). For those, who don't use cmake for building
  you need to define mysqlcppconn_EXPORTS if you are loading dynamically and want
  to use that entry point. (Andrey)

- Fixed bug in ResultSetMetaData for normal statements and prepared ones, getScale
  and getPrecision did return wrong results. (Andrey)

- Fixed http://bugs.mysql.com/bug.php?id=45846 . Excluding dynamically generated
  and platform specific header files source packages generated using cpack (Ulf).

- Connection map property OPT_RECONNECT is now of type boolean (was long long).

- We now check LDFLAGS, CXXFLAGS and CPPFLAGS from the environment for every binary
  we generate. (Ulf, Kent)

- Fixed http://bugs.mysql.com/bug.php?id=45843: cmake error if configuring an out 
  of source build [when not calling cmake in the root directory]. (Ulf)

- Fixed http://bugs.mysql.com/bug.php?id=44931: missing includes when using GCC 4.4.
  Note that GCC 4.4 is not yet in use for any official MySQL builds. (Ulf, Lawrin)

- Fixed a performance issue of Prepared Statements. Reading large result sets has
  been slow - think O(n^2). Patch by Frank Schoenheit from the OpenOffice.org 
  Base team. (Ulf)

- Exchanged most use cases of std::auto_ptr with boost::scoped_ptr. Migrated from
  own solution to boost::scoped_array. In addition, migrated from another own
  solution to boost::shared_ptr/weak_ptr for guarding access around result sets.
  (Andrey)

- API incompatible change: ConnectPropertyVal is no more a struct by a typedef
  that uses boost::variant. This will break your build but is pretty easy to fix.
  If you had code like
  ---
  {
    sql::ConnectPropertyVal tmp;
    tmp.str.val=passwd.c_str();